# affinidi-did-resolver

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: checks.yaml  coverage.yaml  on-push.yaml
affinidi-did-resolver-cache-sdk/: Cargo.toml  README.md
affinidi-did-resolver-cache-sdk/examples/: benchmark.rs  local_resolve.rs  resolve.rs
affinidi-did-resolver-cache-sdk/src/: config.rs  document.rs  errors.rs  lib.rs
affinidi-did-resolver-cache-sdk/src/networking/: mod.rs  network.rs  request_queue.rs  utils.rs
affinidi-did-resolver-cache-sdk/src/resolver/: mod.rs
affinidi-did-resolver-cache-server/: Cargo.toml  README.md
affinidi-did-resolver-cache-server/conf/: cache-conf.toml
affinidi-did-resolver-cache-server/src/: common.rs  config.rs  errors.rs  lib.rs  main.rs  server.rs  session.rs  statistics.rs
affinidi-did-resolver-cache-server/src/handlers/: http.rs  mod.rs  websocket.rs
affinidi-did-resolver-cache-server/tests/: integration_test.rs
affinidi-did-resolver-methods/: Cargo.toml
affinidi-did-resolver-methods/did-example/: Cargo.toml
affinidi-did-resolver-methods/did-example/src/: lib.rs
affinidi-did-resolver-methods/did-peer/: CHANGELOG  Cargo.toml  README.md
affinidi-did-resolver-methods/did-peer/conf/: did-peer-conf.toml
affinidi-did-resolver-methods/did-peer/examples/: generate.rs  resolve.rs
affinidi-did-resolver-methods/did-peer/src/: config.rs  lib.rs
