[package]
name = "affinidi-did-resolver-cache-sdk"
version.workspace = true
description = "Affinidi DID Resolver SDK"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
blake2.workspace = true
did-peer.workspace = true
futures-util.workspace = true
moka.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
ssi.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
clap.workspace = true
num-format.workspace = true
number_prefix.workspace = true
rayon.workspace = true
