[package]
name = "affinidi-did-resolver-cache-sdk"
version.workspace = true
description = "Affinidi DID Resolver SDK"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
crate-type = ["rlib", "cdylib"]


[features]
default = ["local"]
local = []
network = ["dep:tokio-tungstenite"]

[dependencies]
blake2.workspace = true
did-peer.workspace = true
futures-util.workspace = true
moka.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
ssi.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

[dev-dependencies]
clap.workspace = true
num-format.workspace = true
number_prefix.workspace = true
rayon.workspace = true

[profile.release]
lto = true
opt-level = "s"
