[package]
name = "affinidi-did-resolver-cache-server"
version.workspace = true
description = "Affinidi DID Network Cache + Resolver Service"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
rust-version.workspace = true

[dependencies]
affinidi-did-resolver-cache-sdk = { workspace = true, features = ["network"] }
axum.workspace = true
axum-server.workspace = true
chrono.workspace = true
did-peer.workspace = true
http.workspace = true
gxhash.workspace = true
moka.workspace = true
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
ssi.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
