[package]
name = "affinidi-did-resolver-methods"
version.workspace = true
description = "Affinidi DID Methods"
edition.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
keywords.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
